# OLog

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  buffers.cc  buffers.h  log_info.cc  log_info.h  logger.cc  logger.h  olog.h  olog_config.h  portability.h  utils.h
tests/: CMakeLists.txt  buffers_test.cc  log_info_test.cc  olog_test.cc  utils_test.cc
